--- a/src/styles.css
+++ b/src/styles.css
@@ -41,7 +41,7 @@ body {
     background: #343434;
 }
 
-.container-count {
+.container {
     max-width: 1000px;
     margin: auto;
     text-align: center;
