--- a/src/styles.css
+++ b/src/styles.css
@@ -40,3 +40,42 @@ body {
 .menu .menu-item:hover {
     background: #343434;
 }
+
+/* Message module */
+
+.message-container {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    width: 150px;
+    height: 120px;
+    cursor: default;
+    transition: transform 0.2s;
+}
+
+.message-image {
+    width: 100%;
+    height: 100%;
+    transition: transform 0.2s;
+}
+
+.message-text {
+    position: absolute;
+    top: 26%;
+    left: 5%;
+    padding: 0 8px;
+    font-size: 1.4rem;
+    color: #1b1a1a;
+    line-height: 0;
+    letter-spacing: 0.7px;
+    word-spacing: 0.4px;
+    transition: transform 0.2s;
+}
+
+.message-container:hover .message-image {
+    transform: scale(1.3);
+}
+
+.message-container:hover {
+    transform: scale(1.3) translate(8px);
+}
