--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,12 @@ body {
 }
 
 .menu.open {
-    display: block;
+    display: flex;
+    flex-direction: column;
     color: white;
     padding: 10px;
     position: absolute;
+    gap: 5px;
 }
 
 .menu .menu-item {
@@ -39,10 +41,14 @@ body {
     font-size: 1rem;
     color: #eee;
     cursor: pointer;
-    transition: background-color .2s ease-in;
+    transition: all .3s ease-in;
     border-radius: inherit;
+    border: 1px solid transparent;
+    border-bottom: 1px solid #fff;
 }
 
 .menu .menu-item:hover {
-    background: #343434;
+    background: #fff;
+    border: 1px solid #fff;
+    color: black;
 }
